[gd_scene load_steps=5 format=3 uid="uid://c1vwmfj5sqqng"]

[ext_resource type="Script" uid="uid://dd33eambrbjg8" path="res://Launcher/Launcher_UI/game_card.gd" id="1_af6ex"]
[ext_resource type="FontFile" uid="uid://dlu2amlu5gipt" path="res://Assets/Fonts/Kemco Pixel Bold.ttf" id="2_p4pcb"]
[ext_resource type="FontFile" uid="uid://cgriejvcbmcee" path="res://Assets/Fonts/elv-pixels-06.ttf" id="2_x71v0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p4pcb"]
bg_color = Color(0.227451, 0.227451, 0.227451, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.415686, 0.415686, 0.415686, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="GameCard" type="PanelContainer"]
custom_minimum_size = Vector2(50, 100)
offset_right = 181.0
offset_bottom = 192.0
focus_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_p4pcb")
script = ExtResource("1_af6ex")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
focus_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Number_Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_x71v0")
theme_override_font_sizes/font_size = 25
text = "0"
horizontal_alignment = 1

[node name="Title_Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_p4pcb")
theme_override_font_sizes/font_size = 14
text = "Game Title"
horizontal_alignment = 1

[node name="Description_Label" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 10
text = "Game Beschreibung hier"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
